fixed bug where elements were invisible on Map page

--- a/src/app/components/belaqi-map-slider/belaqi-map-slider.component.scss
+++ b/src/app/components/belaqi-map-slider/belaqi-map-slider.component.scss
@@ -25,11 +25,8 @@
     display: flex;
     flex-direction: column;
     margin: auto;
-
-    .segment {
-      flex: none;
-    }
-
+    visibility: visible;
+    
     .full-phenomenon-label {
       position: relative;
       text-align: center;
@@ -39,6 +36,7 @@
       background-color: var(--ion-color-secondary-contrast);
       border-radius: 1em 1em 0 0;
       margin-top: 5%;
+      visibility: visible;
     }
 
     .map-wrapper {
@@ -57,6 +55,12 @@
     }
 
     .segment {
+      flex: none;
+      visibility: visible;
+      position: relative;
+      background-color: var(--ion-color-primary-contrast);
+      width: 90%;
+      left: 5%;
       ion-segment {
         ion-segment-button {
           min-width: 10px;
@@ -66,13 +70,6 @@
           --background: var(--ion-color-primary-contrast);
         }
       }
-    }
-
-    .segment {
-      position: relative;
-      background-color: var(--ion-color-primary-contrast);
-      width: 90%;
-      left: 5%;
     }
 
     .segment-button-checked {
@@ -95,6 +92,7 @@
 
     ion-toolbar {
       --background: none;
+      visibility: visible;
 
       ion-row {
         font-size: 0.8em;
